# polaris

./: Cargo.toml  MINDMAP.txt  README.md  SPEC.md  map.md  sync.sh
.cargo/: config.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-jetson-provisioning/: 01-01-PLAN.md  01-02-PLAN.md  01-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
launch/: beamng.launch.py  hdmi.sh  operator.sh  real.launch.py  sim.sh  sitl.launch.py
polaris_bridge/: Cargo.toml
polaris_bridge/src/: main.rs  pixhawk.rs
polaris_control/: Cargo.toml
polaris_control/src/: main.rs
polaris_motor_sim/: deploy.sh  motor-emulator.service  motor_emulator.py
polaris_msgs/: CMakeLists.txt  package.xml
polaris_msgs/msg/: VehicleState.msg
polaris_operator/: Cargo.toml
polaris_operator/src/: gamepad.rs  main.rs
polaris_sim/: Cargo.toml
polaris_sim/src/: bridge.rs  main.rs
polaris_wheel/: Cargo.toml
polaris_wheel/src/: main.rs  test_detect.rs
