[package]
name = "polaris_bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pixhawk_bridge_node"
path = "src/main.rs"

[dependencies]
r2r = "0.9"
tokio = { version = "1", features = ["full"] }
mavlink = { version = "0.14", features = ["ardupilotmega", "direct-serial"] }
futures = "0.3"
log = "0.4"
env_logger = "0.11"
