[package]
name = "polaris_sim"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "beamng_bridge_node"
path = "src/main.rs"

[dependencies]
r2r = "0.9"
tokio = { version = "1", features = ["full"] }
rmp-serde = "1"
rmpv = "1"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
log = "0.4"
env_logger = "0.11"
