[package]
name = "polaris_wheel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "polaris_wheel"
path = "src/main.rs"

[dependencies]
sdl2 = { version = "0.38.0", features = ["use-pkgconfig"] }
ratatui = "0.29"
crossterm = "0.28"
log = "0.4"
env_logger = "0.11"
quinn = "0.11.9"
rcgen = "0.14.7"
tokio = { version = "1.49.0", features = ["full"] }
